--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<div class="team-block col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="image">
-							<a href="team.html"><img src="images/resource/team-1.jpg" alt="" /></a>
+							<a href="team.html"><img src="images/resource/team-lhr-01.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="team.html">Jacob Reyes</a></h3>
@@ -123,7 +123,7 @@
 				<div class="team-block col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="image">
-							<a href="#"><img src="images/resource/team-2.jpg" alt="" /></a>
+							<a href="#"><img src="images/resource/team-lhr-02.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="team.html">Jacob Reyes</a></h3>
@@ -138,7 +138,7 @@
 				<div class="team-block col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="image">
-							<a href="#"><img src="images/resource/team-3.jpg" alt="" /></a>
+							<a href="#"><img src="images/resource/team-lhr-03.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="team.html">Jacob Reyes</a></h3>
