--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<div class="team-block col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="image">
-							<a href="team.html"><img src="images/resource/team-lhr-01.png" alt="" /></a>
+							<a href="team.html"><img width="100" height="100" src="images/resource/team-lhr-01.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="team.html">Jacob Reyes</a></h3>
