--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 							<a href="team.html"><img src="images/resource/team-lhr-01.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
-							<h3><a href="team.html">Jacob Reyes</a></h3>
+							<h3><a href="team.html">Abdul Rauf</a></h3>
 							<div class="designation">Master Technician</div>
-							<div class="text">This is Photoshop's version  of Lorem]psukroin nibh vel velit auctor aliquet.</div>
+							<div class="text">Maintains, install and repairs plumbing and window or room ac units and electrical construction work.</div>
 							<a href="team.html" class="theme-btn btn-style-two">read more</a>
 						</div>
 					</div>
@@ -126,9 +126,9 @@
 							<a href="#"><img src="images/resource/team-lhr-02.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
-							<h3><a href="team.html">Jacob Reyes</a></h3>
-							<div class="designation">Master Technician</div>
-							<div class="text">This is Photoshop's version  of Lorem]psukroin nibh vel velit auctor aliquet.</div>
+							<h3><a href="team.html">Mansoor Ahmed</a></h3>
+							<div class="designation">Master Plumber</div>
+							<div class="text"> Installation, maintenance and repair sanitation units, water and gas supply lines and house wiring work.</div>
 							<a href="team.html" class="theme-btn btn-style-two">read more</a>
 						</div>
 					</div>
@@ -141,9 +141,9 @@
 							<a href="#"><img src="images/resource/team-lhr-03.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
-							<h3><a href="team.html">Jacob Reyes</a></h3>
-							<div class="designation">Master Technician</div>
-							<div class="text">This is Photoshop's version  of Lorem]psukroin nibh vel velit auctor aliquet.</div>
+							<h3><a href="team.html">Abdur Rehman</a></h3>
+							<div class="designation">Building Thekedar</div>
+							<div class="text"> Specialise in construction of houses, and help you create a personalised home to suit your lifestyle.</div>
 							<a href="team.html" class="theme-btn btn-style-two">read more</a>
 						</div>
 					</div>
