--- a/footer.html
+++ b/footer.html
@@ -17,9 +17,9 @@
                                 </div>
                                 <div class="text">We're Full House Maintenance and Repair and we are available where you need us when you need us. We are committed to being the best at what we do.</div>
                                 <ul class="social-icon-one">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-facebook"></a></li>
-                                    <li><a href="#" class="fa fa-google-plus"></a></li>
+                                    <li><a href="https://www.linkedin.com/company/techlabcity" class="fa fa-linkedin"></a></li>
+                                    <li><a href="https://www.facebook.com/techlabcity" class="fa fa-facebook"></a></li>
+                                    <li><a href="" class="fa fa-instagram"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -70,13 +70,13 @@
                             <div class="footer-widget contact-widget">
                                 <h2>Get In Contact</h2>
                                 <ul class="opening-time">
-                                    <li><span>Monday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Tuesday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Wednesday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Thursday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Friday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Saturday:</span> 9:30 am - 6.00 pm</li>
-                                    <li><span>Sunday:</span> 9:30 am - 6.00 pm</li>
+                                    <li><span>Monday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Tuesday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Wednesday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Thursday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Friday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Saturday:</span> 8:00 am - 7.00 pm</li>
+                                    <li><span>Sunday:</span> 8:00 am - 7.00 pm</li>
                                 </ul>
                             </div>
                         </div>
