--- a/header.html
+++ b/header.html
@@ -8,15 +8,15 @@
                 <!--Top Left-->
                 <div class="top-left">
                     <ul class="links clearfix">
-                        <li><a href="#"><span class="icon fa fa-phone"></span>  Call us +923001118954</a></li>
-                        <li><a href="#"><span class="icon fa fa-envelope-o"></span>contact@techlabcity.com</a></li>
+                        <li><a href="#"><span class="icon fa fa-phone"></span>  Call us +92 300 1118954</a></li>
+                        <li><a href="#"><span class="icon fa fa-envelope-o"></span>techlabcity@gmail.com</a></li>
                     </ul>
                 </div>
                 
                 <!--Top Right-->
                 <div class="top-right clearfix">
                     <ul class="links">
-                        <li><a href="#">Find us on map </a></li>
+                        <!--<li><a href="#">Find us on map </a></li>-->
                         <!--Language-->
                         <li class="language dropdown"><a class="btn btn-default dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">English</a>
                             <ul class="dropdown-menu style-one" aria-labelledby="dropdownMenu2">
@@ -28,9 +28,9 @@
                         </li>
                     </ul>  
                     <ul class="social-icon-one">
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-google-plus"></a></li>
+                        <li><a href="https://www.linkedin.com/company/techlabcity" class="fa fa-fa-linkedin"></a></li>
+                        <li><a href="https://www.facebook.com/techlabcity" class="fa fa-facebook"></a></li>
+                        <li><a href="" class="fa fa-instagram"></a></li>
                     </ul>				
                 </div>
                 
