--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
                         </li>
                     </ul>  
                     <ul class="social-icon-one">
-                        <li><a href="https://www.linkedin.com/company/techlabcity" class="fa fa-fa-linkedin"></a></li>
+                        <li><a href="https://www.linkedin.com/company/techlabcity" class="fa fa-linkedin"></a></li>
                         <li><a href="https://www.facebook.com/techlabcity" class="fa fa-facebook"></a></li>
                         <li><a href="" class="fa fa-instagram"></a></li>
                     </ul>				
