--- a/footer.html
+++ b/footer.html
@@ -68,7 +68,7 @@
                         <!--Footer Column-->
                         <div class="footer-column col-md-8 col-sm-8 col-xs-12">
                             <div class="footer-widget contact-widget">
-                                <h2>Get In Contact</h2>
+                                <h2>Get In Contact: <a href="tel:+923001118954">+92 300 1118954</a></h2>
                                 <ul class="opening-time">
                                     <li><span>Monday:</span> 8:00 am - 7.00 pm</li>
                                     <li><span>Tuesday:</span> 8:00 am - 7.00 pm</li>
