--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
                 <!--Top Left-->
                 <div class="top-left">
                     <ul class="links clearfix">
-                        <li><a href="#"><span class="icon fa fa-phone"></span>  Call us +92 300 1118954</a></li>
+                        <li><a href="#"><span class="icon fa fa-phone"></span>  Call us <a href="tel:+923001118954">+92 300 1118954</a></a></li>
                         <li><a href="#"><span class="icon fa fa-envelope-o"></span>techlabcity@gmail.com</a></li>
                     </ul>
                 </div>
@@ -71,6 +71,7 @@
                                     </ul>
                                 </li> -->
                                 <li><a href="services.html">Services</a></li>
+                                <li><a href="team.html">Team</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <!-- <li class="dropdown"><a href="#">About</a>
                                     <ul>
@@ -115,6 +116,7 @@
             <!--Logo-->
             <div class="logo pull-left">
                 <a href="index.html" class="img-responsive"><img width="100" height="150" src="images/logo.png" alt="" title=""></a>
+                <span class="icon fa fa-phone"></span><a href="tel:+923001118954">+92 300 1118954</a>
             </div>
             
             <!--Right Col-->
@@ -147,6 +149,7 @@
                                 </ul>
                             </li> -->
                             <li><a href="services.html">Services</a></li>
+                            <li><a href="team.html">Team</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <!-- <li><a href="gallery.html">Gallery</a></li>
                             <li class="dropdown"><a href="#">Blog</a>
