--- a/services1.html
+++ b/services1.html
@@ -17,7 +17,7 @@
                             </div>
                         </div>
                     </div>
-                    <h3><a href="services.html">Full Service</a></h3>
+                    <h3><a>Full Service</a></h3>
                     <div class="text">Providing with the services like plumbing, HVAC repair, electrical problems </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                     </div>
-                    <h3><a href="services.html">AC Repair</a></h3>
+                    <h3><a>AC Repair</a></h3>
                     <div class="text">Our expert technicians can repair all of the components of your AC </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                     </div>
-                    <h3><a href="services.html">Plumbing Service</a></h3>
+                    <h3><a>Plumbing Service</a></h3>
                     <div class="text">Service for both residential and commercial facilities  </div>
                 </div>
             </div>
