--- a/services2.html
+++ b/services2.html
@@ -9,7 +9,7 @@
                         <img height="60" width="60" src="images/Services/plumber.png" alt="" />
                         <!-- <span class="icon flaticon-plumber"></span> -->
                     </div>
-                    <h3><a href="services.html">Plumber Service</a></h3>
+                    <h3><a>Plumber Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -21,7 +21,7 @@
                         <img height="60" width="60" src="images/Services/electrician.png" alt="" />
                         <!-- <span class="icon flaticon-electrician"></span> -->
                     </div>
-                    <h3><a href="services.html">Electrician Service</a></h3>
+                    <h3><a>Electrician Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -33,7 +33,7 @@
                         <img height="60" width="60" src="images/Services/air-conditioner.png" alt="" />
                         <!-- <span class="icon flaticon-ac"></span> -->
                     </div>
-                    <h3><a href="services.html">AC Service</a></h3>
+                    <h3><a>AC Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -45,7 +45,7 @@
                         <img height="60" width="60" src="images/Services/handyman.png" alt="" />
                         <!-- <span class="icon flaticon-tools-2"></span> -->
                     </div>
-                    <h3><a href="services.html">Handyman Services</a></h3>
+                    <h3><a>Handyman Services</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         <img height="60" width="60" src="images/Services/house.png" alt="" />
                         <!-- <span class="icon flaticon-toolbox"></span> -->
                     </div>
-                    <h3><a href="services.html">Full Service</a></h3>
+                    <h3><a>Full Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -69,7 +69,7 @@
                         <img height="60" width="60" src="images/Services/roller.png" alt="" />
                         <!-- <span class="icon flaticon-Painter"></span> -->
                     </div>
-                    <h3><a href="services.html">Painter Service</a></h3>
+                    <h3><a>Painter Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -81,7 +81,7 @@
                         <img height="60" width="60" src="images/Services/water-boiler.png" alt="" />
                         <!-- <span class="icon flaticon-geyser"></span> -->
                     </div>
-                    <h3><a href="services.html">Geyser Service</a></h3>
+                    <h3><a>Geyser Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
@@ -93,7 +93,7 @@
                         <img height="60" width="60" src="images/Services/carpenter.png" alt="" />
                         <!-- <span class="icon flaticon-Carpenter"></span> -->
                     </div>
-                    <h3><a href="services.html">Carpenter Service</a></h3>
+                    <h3><a>Carpenter Service</a></h3>
                     <!-- <div class="text">This is Photoshop's version  of Lorem Ipsukroin gravida nibh</div> -->
                 </div>
             </div>
