--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,10 @@
 <!--Main Footer-->
+<a href="https://wa.me/923001118954"
+		class="whatsapp_float"
+		target="_blank"
+		rel="noopener noreferrer">
+              <i class="fa fa-whatsapp whatsapp-icon"></i>
+	</a>
 <footer class="main-footer">
     <!--Widgets Section-->
     <div class="widgets-section">
