--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 <link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 
