--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
 			
 			<!--Contact Form-->
 			<div class="contact-form">
-				<form method="" action="" id="contact-form">
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" width="640" height="924" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+				<!--<form method="" action="" id="contact-form">
 					<div class="row clearfix">
 						<div class="form-group col-lg-4 col-md-6 col-sm-12">
 							<input type="text" name="name" value="" placeholder="Name" required>
@@ -72,7 +73,7 @@
 							<button type="submit" class="theme-btn btn-style-two">Submit</button>
 						</div>                                        
 					</div>
-				</form>
+				</form>-->
 			</div>
 			
 		</div>
