--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,15 @@
 	<!--Contact Form Section-->
 	<section class="contact-form-section">
 		<div class="auto-container">
-			<div class="sec-title centered">
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" width="640" height="924" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+			<!--<div class="sec-title centered">
 				<h2>Get in touch!</h2>
-			</div>
+			</div>-->
 			
 			<!--Contact Form-->
-			<div class="contact-form">
+			<!--<div class="contact-form">
 				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" width="640" height="924" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-				<!--<form method="" action="" id="contact-form">
+				<form method="" action="" id="contact-form">
 					<div class="row clearfix">
 						<div class="form-group col-lg-4 col-md-6 col-sm-12">
 							<input type="text" name="name" value="" placeholder="Name" required>
@@ -73,8 +74,8 @@
 							<button type="submit" class="theme-btn btn-style-two">Submit</button>
 						</div>                                        
 					</div>
-				</form>-->
-			</div>
+				</form>
+			</div>-->
 			
 		</div>
 	</section>
