--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 	<!--Contact Form Section-->
 	<section class="contact-form-section">
 		<div class="auto-container">
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" width="640" height="924" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 			<!--<div class="sec-title centered">
 				<h2>Get in touch!</h2>
 			</div>-->
