--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,11 @@
     <!--End Page Title-->
 	
 	<!--Contact Form Section-->
-	<section class="contact-form-section">
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+	<!--<section class="contact-form-section">
 		<div class="auto-container">
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-			<!--<div class="sec-title centered">
+			
+			<div class="sec-title centered">
 				<h2>Get in touch!</h2>
 			</div>-->
 			
@@ -78,7 +79,7 @@
 			</div>-->
 			
 		</div>
-	</section>
+	</section>-->
 	<!--End Contact Form Section-->
 	
 	<!-- Map Section -->
