--- a/contact.html
+++ b/contact.html
@@ -2,56 +2,60 @@
 <html>
 
 <!-- contact59:55  -->
+
 <head>
-<meta charset="utf-8">
-<title>Tech Lab City</title>
-<!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
-<link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
+	<meta charset="utf-8">
+	<title>Tech Lab City</title>
+	<!-- Stylesheets -->
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
+	<link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 
-<!-- Responsive -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<!-- Responsive -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+	<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 </head>
 
 <body>
 
-<div class="page-wrapper">
- 	
-    <!-- Preloader -->
-    <div class="preloader"></div>
- 	
-    <!-- Main Header-->
-    <div id="header"></div>
-    <!--End Main Header -->
-	
-	<!--Page Title-->
-    <section class="page-title" style="background-image:url(images/background/6.jpg)">
-    	<div class="auto-container">
-        	<h1>Contact us</h1>
-            <!-- <div class="text">If It Runs On Diesel…We’ll Fix It!</div> -->
-        </div>
-    </section>
-    <!--End Page Title-->
-	
-	<!--Contact Form Section-->
-	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-	<!--<section class="contact-form-section">
-		<div class="auto-container">
-			
-			<div class="sec-title centered">
-				<h2>Get in touch!</h2>
-			</div>-->
-			
-			<!--Contact Form-->
-			<!--<div class="contact-form">
+	<div class="page-wrapper">
+
+		<!-- Preloader -->
+		<div class="preloader"></div>
+
+		<!-- Main Header-->
+		<div id="header"></div>
+		<!--End Main Header -->
+
+		<!--Page Title-->
+		<section class="page-title" style="background-image:url(images/background/6.jpg)">
+			<div class="auto-container">
+				<h1>Contact us</h1>
+				<!-- <div class="text">If It Runs On Diesel…We’ll Fix It!</div> -->
+			</div>
+		</section>
+		<!--End Page Title-->
+
+		<!--Contact Form Section-->
+		<section class="contact-form-section">
+			<div class="auto-container">
+
+				<!-- <div class="sec-title centered">
+					<h2>Get in touch!</h2>
+				</div> -->
+				<p align="center"><iframe
+						src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true"
+						frameborder="0" marginheight="0" marginwidth="0" width="780" height="910"
+						overflow="auto">Loading…</iframe>
+				</p>
+				<!--Contact Form-->
+				<!--<div class="contact-form">
 				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdETM1Cu3bdFODjLV8W7cN9Ap8w6d9xqVhv3hF5_ljqas-jMQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 				<form method="" action="" id="contact-form">
 					<div class="row clearfix">
@@ -77,47 +81,48 @@
 					</div>
 				</form>
 			</div>-->
-			
-		</div>
-	</section>-->
-	<!--End Contact Form Section-->
-	
-	<!-- Map Section -->
-	<!-- <div id="locationmap"></div> -->
-	<!-- End Map Section -->
-	
-	<!--Main Footer-->
-    <div id="footer"></div>
-	
-</div>
-<!--End pagewrapper-->
 
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/validate.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/jquery-ui.js"></script>
-<!--Google Map APi Key-->
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyBg0VrLjLvDLSQdS7hw6OfZJmvHhtEV_sE"></script>
-<script src="js/map-script.js"></script>
-<!--End Google Map APi-->
-<script src="js/script.js"></script>
-<script> 
-	$(function(){
-	  $("#header").load("header.html"); 
-	  $("#footer").load("footer.html"); 
-	  $("#services1").load("services1.html"); 
-	  $("#services2").load("services2.html"); 
-	  $("#locationmap").load("locationmap.html"); 
-	  $("#aboutus").load("aboutus.html"); 
-	});
-	</script> 
+			</div>
+		</section>
+		<!--End Contact Form Section-->
+
+		<!-- Map Section -->
+		<!-- <div id="locationmap"></div> -->
+		<!-- End Map Section -->
+
+		<!--Main Footer-->
+		<div id="footer"></div>
+
+	</div>
+	<!--End pagewrapper-->
+
+	<script src="js/jquery.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+	<script src="js/jquery.fancybox.js"></script>
+	<script src="js/appear.js"></script>
+	<script src="js/validate.js"></script>
+	<script src="js/owl.js"></script>
+	<script src="js/wow.js"></script>
+	<script src="js/jquery-ui.js"></script>
+	<!--Google Map APi Key-->
+	<script src="http://maps.google.com/maps/api/js?key=AIzaSyBg0VrLjLvDLSQdS7hw6OfZJmvHhtEV_sE"></script>
+	<script src="js/map-script.js"></script>
+	<!--End Google Map APi-->
+	<script src="js/script.js"></script>
+	<script>
+		$(function () {
+			$("#header").load("header.html");
+			$("#footer").load("footer.html");
+			$("#services1").load("services1.html");
+			$("#services2").load("services2.html");
+			$("#locationmap").load("locationmap.html");
+			$("#aboutus").load("aboutus.html");
+		});
+	</script>
 </body>
 
 <!-- contact59:56  -->
+
 </html>
