--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
                     <ul class="social-icon-one">
                         <li><a href="https://www.linkedin.com/company/techlabcity" class="fa fa-linkedin"></a></li>
                         <li><a href="https://www.facebook.com/techlabcity" class="fa fa-facebook"></a></li>
-                        <li><a href="" class="fa fa-instagram"></a></li>
+                        <li><a href="https://www.instagram.com/techlabcity" class="fa fa-instagram"></a></li>
                     </ul>				
                 </div>
                 
