--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--  46:37  -->
 <head>
 <meta charset="utf-8">
-<title>Tech Lab City</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -13,10 +12,39 @@
 <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 <link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 
+<title>Home Maintenance Services in Lahore | Tech Lab City</title>
+<meta name="keywords" content="Home repair services in Lahore, Home maintenance services Lahore ">
+<meta name="description" content="Are you looking for home maintenance services in Lahore? Look no further! Tech Lab City provides the most affordable, reliable, and quickest services in the Lahore. Our prices are market competitive, and there are no hidden charges.">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@TechLabCity">
+<meta name="twitter:creator" content="@techlabcity">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="en_US">
+<meta property="og:locale:alternate" content="ur_PK">
+<meta property="og:title" content="Home Maintenance Services in Lahore | Tech Lab City">
+<meta property="og:description" content="Are you looking for home maintenance services in Lahore? Look no further! Tech Lab City provides the most affordable, reliable, and quickest services in the Lahore. Our prices are market competitive, and there are no hidden charges.">
+<meta property="og:image" content>
+<meta property="og:image:alt" content="Home Maintenance Services in Lahore | Tech Lab City">
+<meta property="og:url" content="https://www.techlabcity.com">
+<link rel="canonical" href="https://www.techlabcity.com">
+	
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
+  <meta name="content" content="Tech Lab City" />
+  <meta name="author" content="Tech Lab City" />
+  <meta name="application-name" content="Tech Lab City">
+  <meta property="profile:first_name" content="Tech">
+  <meta property="profile:last_name" content="Lab City">
+  <meta property="profile:username" content="Tech Lab City">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Tech Lab City",
+      "url": "https://www.techlabcity.com/"
+    }
+  </script>
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 </head>
