--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 <link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
-
+ <link rel="icon" href="https://icons8.com/icon/FDzkrB2Nvi5q/t" />
 <title>Home Maintenance Services in Lahore | Tech Lab City</title>
 <meta name="keywords" content="Home repair services in Lahore, Home maintenance services Lahore ">
 <meta name="description" content="Are you looking for home maintenance services in Lahore? Look no further! Tech Lab City provides the most affordable, reliable, and quickest services in the Lahore. Our prices are market competitive, and there are no hidden charges.">
