--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 <link rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/t.png" type="image/x-icon">
 <title>Home Maintenance Services in Lahore | Tech Lab City</title>
-<meta name="keywords" content="Home repair services in Lahore, Home maintenance services Lahore ">
+<meta name="keywords" content="Home repair services in Lahore, Home maintenance services Lahore, Services for home Lahore, Home repair Lahore">
 <meta name="description" content="Are you looking for home maintenance services in Lahore? Look no further! Tech Lab City provides the most affordable, reliable, and quickest services in the Lahore. Our prices are market competitive, and there are no hidden charges.">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@TechLabCity">
